Update answer for exercise 6

--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -196,27 +196,28 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.06833034, 0.10708681, 0.23760688]\n"
+     ]
+    }
+   ],
    "source": [
-    "## For loops version:\n",
-    "# tensor = []\n",
+    "# For loops version:\n",
+    "# filtered = []\n",
     "\n",
-    "# for line in b:\n",
-    "#     for subarray in line:\n",
+    "# for subarray in b:\n",
+    "#     if (subarray[len(subarray)-1][-1] <=0.5):\n",
+    "#         filtered.append(subarray[len(subarray)-1][-1])\n",
     "\n",
-    "#         for i, item in enumerate(subarray):\n",
+    "# print(filtered)\n",
     "\n",
-    "#             if i < (len(subarray)-1):\n",
-    "#                 tensor.append(item)\n",
-    "            \n",
-    "#             elif (i == len(subarray)-1) and item<=0.5:\n",
-    "#                 tensor.append(item)\n",
-    "            \n",
-    "#             else:\n",
-    "#                 print(\"Did not append:\", item )\n",
-    "\n",
-    "## List comprehension version\n",
-    "new_tensor = [item for line in b for subarray in line for i,item in enumerate(subarray) if ((len(subarray) -1 and item<=0.5) or (i<len(subarray)-1))]\n"
+    "# List comprehension version\n",
+    "filtered_tensor = [subarray[len(subarray)-1][-1] for subarray in b if (subarray[len(subarray)-1][-1]<=0.5)] \n",
+    "print(filtered_tensor)\n"
    ]
   },
   {
